Fixed jumping wallet on theme change.
████ ███  To request new features or in case this commit breaks something for you,
████ ███  please, create a new github issue with all possible information for me,
▓███▀█▄   but never share your API Keys!
▒▓██ ███
 _______________________________
/ Hello, WORLD!                 \
|                               |
\ pssst.. 1 BTC = 45748.09 EUR. /
 -------------------------------
        \   ^__^
         \  (oo)\_______
            (__)\       )\/\
                ||----w |
                ||     ||

--- a/src/bin/trading-bot/www/sass/bootstrap-theme-dark.scss
+++ b/src/bin/trading-bot/www/sass/bootstrap-theme-dark.scss
@@ -594,7 +594,6 @@ textarea::placeholder {
 .exchange {
   background: #232323;
   border: 1px #313131 solid;
-  padding: 5px;
 }
 
 
@@ -629,15 +628,6 @@ h4 {
 .table.marketQuoting > {
   thead > tr > td, tbody > tr, tbody > tr > td, tfoot > tr > td {
     background-color: #161617;
-  }
-}
-
-.exchange {
-  a {
-    font-size: 11px !important;
-  }
-  div {
-    line-height: 11px;
   }
 }
 
