--- a/src/bin/trading-bot/www/sass/bootstrap-theme.scss
+++ b/src/bin/trading-bot/www/sass/bootstrap-theme.scss
@@ -531,7 +531,7 @@
 
 .exchange {
   background: white;
-  padding-bottom: 7px;
+  border: 1px #CCC solid;
 }
 
 .table.marketQuoting > {
